# qoiw

./: .gitignore  Cargo.toml  README.md  cat.qoi
src/: main.rs
