[package]
name = "qoiw"
version = "0.1.0"
authors = ["Djordje Lukic <djordje.lukic@docker.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoi = { git = "https://github.com/ChevyRay/qoi_rs.git", branch = "main" } 
sdl2 = "0.35.1"
bytemuck = "1.7.2"